--- a/questionnaire/Questionnaire.html
+++ b/questionnaire/Questionnaire.html
@@ -10,6 +10,9 @@
 {% load otree static %}
 {% block content %}
 
+<!-- uncomment this for debugging -->
+{{ form.errors }}
+
 <div id="final-answers">  </div>
  <!-- Slide container -->
  <div class="element-container">  </div>
