--- a/simple_experiment/addTags.html
+++ b/simple_experiment/addTags.html
@@ -1,13 +1,14 @@
 {% extends "global/Page.html" %}
 {% load otree static %} 
 
-{% block title %}
-    
+{% block app_styles %}
+  <link href="{% static 'global/css/FriendlyChecks.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 
-<div class="centered">
+<div class="centered" id="centered">
+  
     <br><br>
     <h1>You can add 3 Tags to your Meme before you post it.</h1>
     <hr>
@@ -30,8 +31,18 @@
 
 <hr>
 
+{% block app_scripts %}
+<script src="{% static 'global/js/FriendlyChecks.js' %}"></script> 
+{% endblock %}
 
-<script>
+<script> 
+
+const bRequireFS    = js_vars.bRequireFS;
+const bCheckFocus   = js_vars.bCheckFocus;
+const defaultPixel  = js_vars.dPixelRatio;
+var TBlur           = new Date().getTime();
+var TFocus          = new Date().getTime();
+
 let dRT          = document.createElement("input");
 dRT.type         = 'hidden';
 dRT.name         = 'dRTTags';
@@ -40,45 +51,61 @@ dRT.value        = '';
 var TStart       = new Date().getTime();
 var TEnd         = new Date().getTime();
 
-  document.addEventListener("DOMContentLoaded", function(debug=true) {
-            console.log('Loading info');
+document.addEventListener("DOMContentLoaded", function(debug=false) {
+    console.log('Loading info');
 
-            let OtreeBody     = document.getElementsByClassName("_otree-content")[0];
-            OtreeBody.appendChild(dRT);
+    let OtreeBody     = document.getElementsByClassName("_otree-content")[0];
+    OtreeBody.appendChild(dRT);
 
-            function addtoev() {
-            var bns = document.getElementsByTagName("button");
-            for (i = 0; i < bns.length; i++) {
-                bns[i].addEventListener("click", function() {
-                TEnd      = new Date().getTime();
-                dRT.value = +TEnd -TStart;   // end the timer and rewrite the RT value
-              });
-            }} 
+    let fullbody = document.getElementById('centered');
+    InitializeFriendlyChecks(fullbody, bRequireFS, bCheckFocus);
 
-            window.addEventListener("load",function() {
-            addtoev();
-            });
+    function addtoev() {
+    var bns = document.getElementsByTagName("button");
+    for (i = 0; i < bns.length; i++) {
+        bns[i].addEventListener("click", function() {
+        TEnd      = new Date().getTime();
+        dRT.value = +TEnd -TStart;   // end the timer and rewrite the RT value
         });
+    }} 
+
+    window.addEventListener("load",function() {
+        addtoev();
+      });
+});
+
 </script>
 
+
+
 <style>
-
 .centered {
-  text-align: center;
-  max-width:100%;
-  max-height:100%;
-  align-items: center;
-  flex-flow: center;
+    text-align: center;
+    max-width:100%;
+    max-height:100%;
+    align-items: center;
+    flex-flow: center;
+  }
+  
+h1 {
+      text-align: center;
+      color: #333;
+      letter-spacing: 0.05em;
+      margin: 0 0 0.4em;
+      font-size: 1.2em;
+      font-family: sans-serif;
+  }
+
+.debug-info {
+    display:none;
 }
 
-h1 {
-    text-align: center;
-    color: #333;
-    letter-spacing: 0.05em;
-    margin: 0 0 0.4em;
-    font-size: 1.2em;
-    font-family: sans-serif;
+.otree-timer {
+    display: none;
 }
+
 </style>
+
+
 
 {% endblock %}
