--- a/simple_experiment/ready.html
+++ b/simple_experiment/ready.html
@@ -20,6 +20,10 @@
   /*   padding: 2em 0em; */
   }
 
+  .debug-info {
+    display:none;
+  }
+
   .btn {
     letter-spacing: 0.1em;
     cursor: pointer;
