--- a/_templates/Instructions/slide1.html
+++ b/_templates/Instructions/slide1.html
@@ -3,7 +3,7 @@
         <p> In this experiment you will:</p>
         <ul>
             <li> Be able to post or see as many Memes you want for <b>10 minutes</b>. The figure to the right shows a preview of this platform. The left part displays the Feed. </li>
-            <li> Each time you decide to post a Meme, you select among a set of <b>six</b> potentially funny, interesting or relatable Meme pictures. Your last post will be displayed in the right part of the screen.</li>
+            <li> Each time you decide to post a Meme, you select among a set of <b>6</b> potentially funny, interesting or relatable Meme pictures. Your last post will be displayed in the right part of the screen.</li>
             <li> In an earlier part of this study, these memes were rated by 40 independent participants. Thus, the feedback you will receive after you post is <strong>real</strong>. </li>
             <li> The maximum number of Likes that a post received during the ratings was 34, and the minimum was 13.</li>
         </ul>
