--- a/simple_experiment/SplitScreen.html
+++ b/simple_experiment/SplitScreen.html
@@ -335,6 +335,9 @@ document.addEventListener("DOMContentLoaded", function(debug=false) {
     OtreeBody.appendChild(sFixations);
     OtreeBody.appendChild(sOrderFixations);
     OtreeBody.appendChild(dRT);
+    OtreeBody.appendChild(iFocusLost);
+    OtreeBody.appendChild(dFocusLostT);
+    OtreeBody.appendChild(iFullscreenChange);
 });
 
 </script>
