--- a/_templates/Instructions/slide3.html
+++ b/_templates/Instructions/slide3.html
@@ -16,11 +16,11 @@
     </div>
     <div class="button-container">       
         <button type="button" class="game-btn btn-outcome mousy" id="b3"> 
-            <div class="btn-content"> 30 <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span>  people out of 40 <br>liked your post </div>
+            <div class="btn-content"> Nice <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span>  :D  </div>
             <div class="btn-hidden"> Hover me! </div>
         </button> 
-        <p class="text-reveal" id="reveal">
+        <!-- <p class="text-reveal" id="reveal">
             Nice :D
-        </p>
+        </p> -->
     </div>
 </div>
