Anton beta tests

--- a/simple_experiment/SplitScreen.html
+++ b/simple_experiment/SplitScreen.html
@@ -56,10 +56,16 @@
     {{ endif }}
 
     {{ if subsession.round_number > 1 }} 
-        <br>   <div class="nes-container" style=background-color:white;visibility:visible; >
+        <br>  
+        <div class="nes-container" style=background-color:white;visibility:visible; >
             <p style=color:black;background-color:white;font-family:courier;font-weight:100;> Your last post.    ᕕ(ᐛ)ᕗ  </p>
         </div>
-        <br> <br><br> <br> <img style="width: 250px; position: fixed; margin-top: 125px; " src="{{ static image_path }}"/>
+        <br> <br><br> <br> 
+
+        <!-- <div class="polaroid" > -->
+            <img style="width: 250px; position: fixed; margin-top: 20vh;" src="{{ static image_path }}"/>
+        <!-- </div> -->
+
         <br><br><br><br><br> <br><br><br><br> <br>
         <!-- <br> <br> <br><br><br>  -->
     
