Alejandro beta tests

--- a/_templates/Instructions/slide0.html
+++ b/_templates/Instructions/slide0.html
@@ -1,10 +1,13 @@
-
-<ul>
-    <li>Please read carefully the information below. At the end of this instructions, you will be asked some comprehension questions to make surethey were understood properly. </li>
-    <li>In this study, you will be interacting within a platform that is meant to resemble aspects of social media (for example, Instagram). </li>
-    <li>You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b>  Memes in an infinite Feed.</li>
-    <li>Please select the Meme you like the best and that you think the others will like as well. </li>
-    <li>You select a meme by <b>pressing a number in your keyboard</b>.</li>
-</ul>
-
-
+<div class="double-container">
+    <div class="text-container">
+        <p> Please read carefully the information below. At the end of this instructions, you will be asked some comprehension questions to make sure they were understood properly.</p>
+        <ul>
+            <li>In this study, you will be using a platform that resembles aspects of social media (for example, Instagram). </li>
+            <li>You can either <b>post</b> “Memes” (humorous pictures) or <b>see and rate</b>  Memes in an infinite Feed.</li>
+            <li>The figure to the right shows a preview of this platform. The left part displays the Feed. After you post for the first time, the information about your last post will be displayed in the right part of the screen.</li>
+        </ul>
+    </div>
+    <div class="img-container">
+        <img class="task-img" src="{% static 'global/Instructions.png' %}" />
+    </div>
+</div>
