--- a/_templates/Instructions/slide3.html
+++ b/_templates/Instructions/slide3.html
@@ -16,7 +16,7 @@
     </div>
     <div class="button-container">       
         <button type="button" class="game-btn btn-outcome mousy" id="b3"> 
-            <div class="btn-content"> Nice <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span>  :D  </div>
+            <div class="btn-content"> 32 likes <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span>  :D  </div>
             <div class="btn-hidden"> Hover me! </div>
         </button> 
         <!-- <p class="text-reveal" id="reveal">
