--- a/simple_experiment/HowDoYaFeel.html
+++ b/simple_experiment/HowDoYaFeel.html
@@ -26,7 +26,7 @@
     </div>
 
   <div class="buttons">
-    <button type="button" id="lockrange">Lock range</button>
+    <button type="button" id="lockrange">Lock value</button>
     <button type="button" id="submit" onclick="checkRange()">Submit</button>
   </div>
 </div>
