--- a/simple_experiment/ready.html
+++ b/simple_experiment/ready.html
@@ -5,7 +5,7 @@
 
 <div><h3>Click the button below when you are ready to start the game (◕ᴗ◕✿)  </h3></div> <br><br>
 
-<button class="btn effect01" target="_blank">I was born ready</button>
+<button class="btn effect01" target="_blank">Let's do it</button>
 
 <style>
  .buttons {
