--- a/simple_experiment/SplitScreen.html
+++ b/simple_experiment/SplitScreen.html
@@ -69,13 +69,13 @@
         <br><br><br><br><br> <br><br><br><br> <br> <br> <br>
         <!-- <br> <br> <br><br><br>  -->
     
-        <button type="button" class="game-btn btn-outcome r0 c0" id="btnL" onmouseenter="recordButtons(event,this.id)" onmouseleave="recordButtons(event,this.id)"> 
-            <div class="btn-content"> {{ likes }} <span style="font-size:120%; font-family:Garamond; color:red;">&hearts;</span> <br> people out of 40 <br> liked your post </div>
+        <button type="button" class="game-btn btn-outcome r0 c0" style="width: 215px;" id="btnL" onmouseenter="recordButtons(event,this.id)" onmouseleave="recordButtons(event,this.id)"> 
+            <div class="btn-content"> <span style="font-size:175%; color:black;"> {{ likes }} <b style="color:red">&#10084;</b> people <br> out of 40 <br> liked your post </span></div>
             <div class="btn-hidden">  </div>
         </button> 
         <div class="break"> </div>
-        <button type="button" class="game-btn btn-outcome r1 c0" id="btnD" onmouseenter="recordButtons(event,this.id)" onmouseleave="recordButtons(event,this.id)">
-            <div class="btn-content"> {{ dislikes }} <span style="font-size:100%; color:rgb(128, 18, 18);">&#128148;</span> <br> people out of 40 <br> <b>did not</b> like <br> your post</div>
+        <button type="button" class="game-btn btn-outcome r1 c0" style="width: 215px;" id="btnD" onmouseenter="recordButtons(event,this.id)" onmouseleave="recordButtons(event,this.id)">
+            <div class="btn-content"> <span style="font-size:175%; color:black"> {{ dislikes }} <b style="font-family:Garamond;"> &#128148; </b>  people <br> out of 40 <br> <b>did not</b> like your post </span>
             <div class="btn-hidden">  </div>
         </button>      
     {{ endif }}
